# backtester-mcp

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  glama.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: test.yml
benchmarks/: bench_engine.py  bench_launch.py  bench_robustness.py
datasets/: btc_hourly.parquet  spy_daily.parquet  synthetic_kalshi.parquet
examples/: agent_workflow_demo.py  mcp_example.py  pbo_demo.py  quickstart.py  sample_report.html
scripts/: generate_datasets.py
src/backtester_mcp/: __init__.py  __main__.py  cli.py  data.py  engine.py  manifest.py  mcp_server.py  metrics.py  optimize.py  orderbook.py  portfolio.py  report.py  robustness.py  sensitivity.py  store.py
strategies/: mean_reversion.py  momentum.py  prediction_market.py
tests/: conftest.py  test_cli.py  test_data.py  test_engine.py  test_examples.py  test_manifest.py  test_mcp_integration.py  test_metrics.py  test_orderbook.py  test_portfolio.py  test_robustness.py  test_sensitivity.py  test_store.py
